--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,13 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+SMSLogin/README.md
+SMSLogin/SMSLogin.sln
+SMSLogin/SMSLogin/App.config
+SMSLogin/SMSLogin/packages.config
+SMSLogin/SMSLogin/Program.cs
+SMSLogin/SMSLogin/Properties/AssemblyInfo.cs
+SMSLogin/SMSLogin/ServiceEmail.cs
+SMSLogin/SMSLogin/serviceSMS.cs
+SMSLogin/SMSLogin/SMSLogin.csproj
+SMSLogin/SMSLogin/User.cs
