--- a/HomeWork/HomeWork15/HomeWork15/HomeWork15.csproj
+++ b/HomeWork/HomeWork15/HomeWork15/HomeWork15.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4C75BAA9-6428-4413-B278-43EA58628B6A}</ProjectGuid>
+    <ProjectGuid>{5B3D83FF-ED9F-420C-A83C-9A7F2B2EDC11}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HomeWork5</RootNamespace>
-    <AssemblyName>HomeWork5</AssemblyName>
+    <RootNamespace>HomeWork15</RootNamespace>
+    <AssemblyName>HomeWork15</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyStrings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -50,10 +49,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Additionals\Additionals.csproj">
-      <Project>{01516a9d-8884-4244-a0ce-6bd8072a2831}</Project>
-      <Name>Additionals</Name>
-    </ProjectReference>
+    <Content Include="fibo.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
